--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,14 +1,14 @@
 <nav>
     <ul class="menu">
         <li>
-            <button type="button" role="button" class="btnMenu btn-category" id="indexBtn">
-                <i class="ri-arrow-left-wide-line"></i>
+            <button type="button" class="btnMenu btn-category" id="indexBtn" aria-label="Seguir comprando">
+                <i class="ri-arrow-left-wide-line" aria-hidden="true"></i>
                 Seguir comprando
             </button>
         </li>
         <li>
-            <button type="button" role="button" class="btnMenu active">
-                <i class="ri-shopping-cart-2-fill"></i>
+            <button type="button" class="btnMenu active" aria-label="Ver carrito">
+                <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
                 Carrito
             </button>
         </li>
@@ -57,8 +57,8 @@
                     </div>
                 </div>
                 <div class="btns-emptyCart-div">
-                    <button type="button" role="button" id="indexBtn" class="btn btn-b">Ir a
-                        Comprar <i class="ri-shopping-cart-2-fill"></i>
+                    <button type="button" id="indexBtn" class="btn btn-b" aria-label="Ir a la tienda">
+                        Ir a Comprar <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
                     </button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
 
         <div id="cart-actions" class="cart-actions disabled">
             <div class="cart-actions-left">
-                <button type="button" role="button" id="btn-cart-empty" class="btn btn-cart-empty">
+                <button type="button" id="btn-cart-empty" class="btn btn-cart-empty" aria-label="Vaciar carrito">
                     Vaciar carrito
                 </button>
             </div>
@@ -79,7 +79,7 @@
                     <p>Total:</p>
                     <p id="total">₡ 0</p>
                 </div>
-                <button type="button" role="button" id="btn-cart-buy" class="btn btn-cart-buy">
+                <button type="button" id="btn-cart-buy" class="btn btn-cart-buy" aria-label="Comprar ahora">
                     Comprar ahora
                 </button>
             </div>
