--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,37 +28,38 @@
 <body>
     <div class="wrapper">
         <header class="header-mobile">
-            <button type="button">
+            <button type="button" aria-label="Abrir página principal">
                 <img class="logo" src="/images/logo.webp" alt="Logo de la tienda" width="150" height="50">
             </button>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
                     <li class="nav-item">
-                        <button type="button" role="button" id="all" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" id="all" class="btn-menu-mobile btn-category" data-nav-link
+                            aria-label="Mostrar productos varios">
                             Productos varios
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" role="button" id="shirts" class="btn-menu-mobile btn-category"
-                            data-nav-link>
+                        <button type="button" id="shirts" class="btn-menu-mobile btn-category" data-nav-link
+                            aria-label="Mostrar camisetas">
                             Camisetas
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" role="button" id="coats" class="btn-menu-mobile btn-category"
-                            data-nav-link>
+                        <button type="button" id="coats" class="btn-menu-mobile btn-category" data-nav-link
+                            aria-label="Mostrar abrigos">
                             Abrigos
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" role="button" id="pants" class="btn-menu-mobile btn-category"
-                            data-nav-link>
+                        <button type="button" id="pants" class="btn-menu-mobile btn-category" data-nav-link
+                            aria-label="Mostrar pantalones">
                             Pantalones
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" role="button" id="shoes" class="btn-menu-mobile btn-category"
-                            data-nav-link>
+                        <button type="button" id="shoes" class="btn-menu-mobile btn-category" data-nav-link
+                            aria-label="Mostrar zapatos">
                             Zapatos
                         </button>
                     </li>
