--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,19 +1,16 @@
 <nav>
     <ul class="menu">
-        <li>
-            <button type="button" class="btnMenu btn-category" id="indexBtn" aria-label="Seguir comprando">
-                <i class="ri-arrow-left-wide-line" aria-hidden="true"></i>
-                Seguir comprando
-            </button>
+        <li lass="btnMenu btn-category" id="indexBtn">
+            <i class="ri-arrow-left-wide-line" aria-hidden="true"></i>
+            Seguir comprando
         </li>
-        <li>
-            <button type="button" class="btnMenu active" aria-label="Ver carrito">
-                <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
-                Carrito
-            </button>
+        <li class="btnMenu active">
+            <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
+            Carrito
         </li>
     </ul>
 </nav>
+
 <footer class="text-footer">BStudio</footer>
 </aside>
 <main class="cart-main">
