--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,35 +33,20 @@
             </button>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
-                    <li class="nav-item">
-                        <button type="button" id="all" class="btn-menu-mobile btn-category" data-nav-link
-                            aria-label="Mostrar productos varios">
-                            Productos varios
-                        </button>
+                    <li class="nav-item btn-menu-mobile btn-category" id="all" data-nav-link>
+                        <a href="#" class="nav-link">Productos varios</a>
                     </li>
-                    <li class="nav-item">
-                        <button type="button" id="shirts" class="btn-menu-mobile btn-category" data-nav-link
-                            aria-label="Mostrar camisetas">
-                            Camisetas
-                        </button>
+                    <li class="nav-item btn-menu-mobile btn-category" id="shirts" data-nav-link>
+                        <a href="#" class="nav-link">Camisetas</a>
                     </li>
-                    <li class="nav-item">
-                        <button type="button" id="coats" class="btn-menu-mobile btn-category" data-nav-link
-                            aria-label="Mostrar abrigos">
-                            Abrigos
-                        </button>
+                    <li class="nav-item btn-menu-mobile btn-category" id="coats" data-nav-link>
+                        <a href="#" class="nav-link">Abrigos</a>
                     </li>
-                    <li class="nav-item">
-                        <button type="button" id="pants" class="btn-menu-mobile btn-category" data-nav-link
-                            aria-label="Mostrar pantalones">
-                            Pantalones
-                        </button>
+                    <li class="nav-item btn-menu-mobile btn-category" id="pants" data-nav-link>
+                        <a href="#" class="nav-link">Pantalones</a>
                     </li>
-                    <li class="nav-item">
-                        <button type="button" id="shoes" class="btn-menu-mobile btn-category" data-nav-link
-                            aria-label="Mostrar zapatos">
-                            Zapatos
-                        </button>
+                    <li class="nav-item btn-menu-mobile btn-category" id="shoes" data-nav-link>
+                        <a href="#" class="nav-link">Zapatos</a>
                     </li>
                 </ul>
             </nav>
