--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,8 +40,8 @@
         </div>
     </div>
     <p id="empty-comment" class="empty-comment disabled">No se encontró ningun producto.</p>
-    <button type="button" role="button" class="go-top-btn">
-        <i class="ri-arrow-up-line"></i>
+    <button type="button" role="button" class="go-top-btn" aria-label="Ir al inicio de la página">
+        <i class="ri-arrow-up-line" aria-hidden="true"></i>
     </button>
     <div class="productContainer" id="productContainer">
         <!-- JS -->
