--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,11 +10,17 @@
     <meta name="Luis Bossa" content="Elexir">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
-    <!-- Cargar estilos no críticos de manera diferida -->
+    <!-- Preconnect al CDN para mejorar la carga de recursos -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+
+    <!-- Cargar CSS de manera diferida para Remix Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
         onload="this.media='all'">
+
+    <!-- Cargar CSS de manera diferida para Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         media="print" onload="this.media='all'">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" media="print"
         onload="this.media='all'">
 
