--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         media="print" onload="this.media='all'">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" media="print"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3/src/toastify.min.css" media="print"
         onload="this.media='all'">
 
     <link rel="stylesheet" href="/css/sweetAlert.css" media="all">
@@ -95,8 +95,8 @@
 
             <%- body %>
 
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
-                <script src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.0" defer></script>
+                <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3" defer></script>
 </body>
 
 </html>
