--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,23 +39,23 @@
             </button>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
-                    <li class="nav-item btn-menu-mobile btn-category" id="all" data-nav-link>
+                    <li class="nav-item btn-menu-mobile btn-category" id="all" data-nav-link role="button" aria-label="Mostrar todos los productos">
                         <a href="#" class="nav-link">Productos varios</a>
                     </li>
-                    <li class="nav-item btn-menu-mobile btn-category" id="shirts" data-nav-link>
+                    <li class="nav-item btn-menu-mobile btn-category" id="shirts" data-nav-link role="button" aria-label="Mostrar camisetas">
                         <a href="#" class="nav-link">Camisetas</a>
                     </li>
-                    <li class="nav-item btn-menu-mobile btn-category" id="coats" data-nav-link>
+                    <li class="nav-item btn-menu-mobile btn-category" id="coats" data-nav-link role="button" aria-label="Mostrar abrigos">
                         <a href="#" class="nav-link">Abrigos</a>
                     </li>
-                    <li class="nav-item btn-menu-mobile btn-category" id="pants" data-nav-link>
+                    <li class="nav-item btn-menu-mobile btn-category" id="pants" data-nav-link role="button" aria-label="Mostrar pantalones">
                         <a href="#" class="nav-link">Pantalones</a>
                     </li>
-                    <li class="nav-item btn-menu-mobile btn-category" id="shoes" data-nav-link>
+                    <li class="nav-item btn-menu-mobile btn-category" id="shoes" data-nav-link role="button" aria-label="Mostrar zapatos">
                         <a href="#" class="nav-link">Zapatos</a>
                     </li>
-                </ul>
-            </nav>
+                </ul>                
+            </nav>            
             <div class="header-wrap">
                 <div class="res-search-box">
                     <input type="text" class="input" id="res-input" placeholder="Buscar.."
