--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <!-- Preconnect al CDN para mejorar la carga de recursos -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
-    <!-- Cargar CSS de manera diferida para Remix Icons -->
+    <!-- Cargar los estilos de Remix Icon de forma diferida -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
         onload="this.media='all'">
 
