--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,16 +10,13 @@
     <meta name="Luis Bossa" content="Elexir">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
-    <!-- Preconnect al CDN para mejorar la carga de recursos -->
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-
     <!-- Cargar los estilos de Remix Icon de forma diferida -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
         onload="this.media='all'">
 
-    <link rel="preload"
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@300;400&display=swap"
-        as="style" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3/src/toastify.min.css" media="print"
         onload="this.media='all'">
@@ -100,7 +97,7 @@
 
             <%- body %>
 
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.0" defer></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                 <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3" defer></script>
 </body>
 
