--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul class="menu">
-        <li lass="btnMenu btn-category" id="indexBtn">
+        <li class="btnMenu btn-category" id="indexBtn">
             <i class="ri-arrow-left-wide-line" aria-hidden="true"></i>
             Seguir comprando
         </li>
