--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -96,7 +96,7 @@
 
             <%- body %>
 
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
                 <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3" defer></script>
 </body>
 
