--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,12 +10,19 @@
     <meta name="Luis Bossa" content="Elexir">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
+    <!-- Preconnect al CDN para mejorar la carga de recursos -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+
     <!-- Cargar los estilos de Remix Icon de forma diferida -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
         onload="this.media='all'">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         media="print" onload="this.media='all'">
+
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@300;400&display=swap"
+        as="style" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3/src/toastify.min.css" media="print"
         onload="this.media='all'">
@@ -96,7 +103,7 @@
 
             <%- body %>
 
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.0" defer></script>
                 <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3" defer></script>
 </body>
 
