--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
         onload="this.media='all'">
 
+    <!-- Cargar los estilos de Font Awesome de forma diferida -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         media="print" onload="this.media='all'">
+
 
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@300;400&display=swap"
