--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,11 +13,11 @@
     <!-- Preconnect al CDN para mejorar la carga de recursos -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
-    <!-- Cargar los estilos de Remix Icon de forma diferida -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="print"
+    <!-- Versión minificada de Remix Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" media="print"
         onload="this.media='all'">
 
-    <!-- Cargar los estilos de Font Awesome de forma diferida -->
+    <!-- Versión minificada de Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         media="print" onload="this.media='all'">
 
