--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,19 @@
     <meta name="Luis Bossa" content="Elexir">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
+    <!-- Preconnect para optimizar las solicitudes -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+
+    <!-- Cargar Remix Icon de forma diferida solo cuando sea necesario -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" media="print"
+        onload="this.media='all'" id="remixicon">
+
+    <!-- Cargar Font Awesome de forma diferida solo cuando sea necesario -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        media="print" onload="this.media='all'" id="font-awesome">
+
+
+
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@300;400&display=swap"
         as="style" />
