--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -218,13 +218,16 @@
 }
 
 .empty-cart {
-  font-size: 15vw;
+  display: block;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
   color: var(--clr-blue);
 }
 
 .empty-heading {
   width: 400px;
-  font-size: 3.2vw;
+  font-size: 2.5vw;
   text-align: start;
   color: var(--clr-aside);
 }
