--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -47,7 +47,8 @@
                 </div>
                 <div class="no-products">
                     <div class="empty-wrap">
-                        <i class="empty-cart fa fa-cart-arrow-down"></i>
+                        <img loading="lazy" class="empty-cart" src="/images/shopping-cart.webp" width="256"
+                            height="256">
                         <div class="empty-heading">
                             ¡Su carrito esta vacío!
                         </div>
