--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,11 +1,11 @@
 <nav>
     <ul class="menu">
         <li class="btnMenu btn-category" id="indexBtn">
-            <i class="ri-arrow-left-wide-line" aria-hidden="true"></i>
+            <img loading="lazy" class="cart-icon" src="/images/invert-arrow-icon.png" width="24" height="24">
             Seguir comprando
         </li>
         <li class="btnMenu active">
-            <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
+            <img loading="lazy" class="arrow-iconb" src="/images/arrow-iconb.png" width="24" height="24">
             Carrito
         </li>
     </ul>
