--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -62,12 +62,12 @@
                     <input type="text" class="input" id="res-input" placeholder="Buscar.."
                         aria-label="Buscar productos">
                     <div class="res_search" id="res_search" aria-label="Iniciar búsqueda">
-                        <i class="ri-search-line"></i>
+                        <img loading="lazy" src="/images/res-search.png" width="21" height="21">
                     </div>
                 </div>
 
                 <button type="button" id="cartBtn" class="res-cart" aria-label="Ir al carrito de compras">
-                    <i class="ri-shopping-cart-2-fill"></i>
+                    <img loading="lazy" src="/images/res-cart.png" width="22" height="22">
                     <span id="number2" class="res-number">0</span>
                 </button>
 
