--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,27 @@
 <nav>
     <ul class="menu">
         <li id="all" class="btnMenu btn-category active" aria-label="Mostrar todos los productos">
-            <i class="ri-arrow-up-wide-line" aria-hidden="true"></i> Productos varios
+            <img loading="lazy" class="arrow-iconb" src="/images/arrow-iconb.png" width="24" height="24">
+            Productos varios
         </li>
         <li id="shirts" class="btnMenu btn-category" aria-label="Mostrar camisetas">
-            <i class="ri-arrow-up-wide-line" aria-hidden="true"></i> Camisetas
+            <img loading="lazy" class="cart-icon" src="/images/arrow-icon.png" width="24" height="24">
+            Camisetas
         </li>
         <li id="coats" class="btnMenu btn-category" aria-label="Mostrar abrigos">
-            <i class="ri-arrow-up-wide-line" aria-hidden="true"></i> Abrigos
+            <img loading="lazy" class="cart-icon" src="/images/arrow-icon.png" width="24" height="24">
+            Abrigos
         </li>
         <li id="pants" class="btnMenu btn-category" aria-label="Mostrar pantalones">
-            <i class="ri-arrow-up-wide-line" aria-hidden="true"></i> Pantalones
+            <img loading="lazy" class="cart-icon" src="/images/arrow-icon.png" width="24" height="24">
+            Pantalones
         </li>
         <li id="shoes" class="btnMenu btn-category" aria-label="Mostrar zapatos">
-            <i class="ri-arrow-up-wide-line" aria-hidden="true"></i> Zapatos
+            <img loading="lazy" class="cart-icon" src="/images/arrow-icon.png" width="24" height="24">
+            Zapatos
         </li>
         <li id="cartBtn" class="btnMenu btn-cart" aria-label="Abrir carrito de compras">
-            <i class="ri-shopping-cart-2-fill" aria-hidden="true"></i>
+            <img loading="lazy" class="cart-icon" src="/images/res-cart.png" width="24" height="24">
             Carrito
             <span id="number" class="number" aria-label="Cantidad de productos en el carrito">0</span>
         </li>
@@ -46,7 +51,7 @@
     <div class="productContainer" id="productContainer">
         <!-- JS -->
     </div>
-    
+
     <div class="modal-content">
         <!-- JS -->
     </div>
